# test_govniche

./: .env.example  .gitignore  ARCHITECTURE.md  AWS_SETUP_GUIDE.md  QUICK_START.md  README.md  edit-env.sh  install.sh  jest.config.js  package-lock.json  package.json  start.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: AwsConfigWarning.css  AwsConfigWarning.js  FileList.css  FileList.js  FileUpload.css  FileUpload.js
client/src/services/: api.js
cpp/: CMakeLists.txt  README.md
cpp/include/: storage.hpp
cpp/src/: main.cpp  storage.cpp
docs/: IDF.md  S3_API.md  TEST_DOCUMENTATION.md
server/: index.js
server/__tests__/: api.test.js  localStorage.config.test.js  security.test.js  setup.js
server/config/: localStorage.js  s3.js  s3Storage.js
server/db/: s3.js
server/routes/: localStorage.js  s3.js  s3Api.js
uml/: DIAGRAMS_INDEX.md  README.md  activity-diagram.puml  api-idf-diagram.puml  class-diagram.puml  component-diagram.puml  deployment-diagram.puml  generate-png.sh  sequence-download.puml  sequence-list.puml  sequence-upload.puml  state-diagram.puml  usecase-diagram.puml
